# libqalculate

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  README.translate  TODO  autogen.sh  configure.ac  libqalculate.pc.in  selfcontained-binary.patch
contrib/: README.md  qalc_refresh_rates.service  qalc_refresh_rates.timer
data/: Makefile.am  currencies.xml.in  datasets.xml.in  definitions.gresource.xml  elements.xml.in  eurofxref-daily.xml  functions.xml.in  planets.xml.in  prefixes.xml.in  rates.html  rates.json  units-old_SI.xml  units.xml.in  variables-old_SI.xml  variables.xml.in
data/its/: qalculate.its  qalculate.loc
docs/: Makefile.am
docs/reference/: Doxyfile  Makefile.am
libqalculate/: BuiltinFunctions-algebra.cc  BuiltinFunctions-calculus.cc  BuiltinFunctions-combinatorics.cc  BuiltinFunctions-datetime.cc  BuiltinFunctions-explog.cc  BuiltinFunctions-logical.cc  BuiltinFunctions-matrixvector.cc  BuiltinFunctions-number.cc  BuiltinFunctions-special.cc  BuiltinFunctions-statistics.cc  BuiltinFunctions-trigonometry.cc  BuiltinFunctions-util.cc  BuiltinFunctions.cc  BuiltinFunctions.h  Calculator-calculate.cc  Calculator-convert.cc  Calculator-definitions.cc  Calculator-parse.cc  Calculator-plot.cc  Calculator.cc  Calculator.h  Calculator_p.h  DataSet.cc  DataSet.h  ExpressionItem.cc  ExpressionItem.h  ExpressionItem_p.h  Function.cc  Function.h  Makefile.am  MathStructure-calculate.cc  MathStructure-convert.cc  MathStructure-decompose.cc  MathStructure-differentiate.cc  MathStructure-eval.cc  MathStructure-factor.cc  MathStructure-gcd.cc  MathStructure-integrate.cc  MathStructure-isolatex.cc  MathStructure-limit.cc  (+29 more)
m4/: ax_prog_cc_for_build.m4  ax_prog_cxx_for_build.m4  libtool.m4  ltoptions.m4  ltsugar.m4  ltversion.m4  lt~obsolete.m4  progtest.m4
man/: Makefile.am  qalc.1
po/: ChangeLog  LINGUAS  Makefile.in.in  Makevars  POTFILES.in  POTFILES.skip  ca.po  de.po  es.po  fr.po  ka.po  libqalculate.pot  nl.po  ru.po  sv.po  zh_CN.po  zh_TW.po
po-defs/: LINGUAS  Makefile.am  Makevars  POTFILES.in  ca.po  es.po  fr.po  fr.po.orig  libqalculate.pot  nl.po  remove-untranslated.cc  ru.po  sv.po  zh_CN.po  zh_TW.po
po-defs-fixed/: Makefile.am  remove-untranslated.cc
po-defs-fixed/fixed/: Makefile.am
po-defs/fixed/: Makefile.am
src/: Makefile.am  defs2doc.cc  examples2doc.cc  qalc.cc  test.cc  unittest.cc
tests/: Makefile.am  bitwise.batch  calculus.batch  dates.batch  explog.batch  geometry.batch  limits.batch  matrix.batch  matrixvector.batch  numberbase.batch  operators.batch  parser.batch  percentages.batch  polynomial.batch  solver.batch  stats.batch  strings.batch  units.batch  variables.batch  vectordata.csv  vectordata2.csv
